remove image from articles

--- a/docs/_includes/blog_post_article.html
+++ b/docs/_includes/blog_post_article.html
@@ -27,11 +27,11 @@
   </div>
 
   <div class="card-body" itemprop="articleBody">
-    <img
+    <!-- <img
       class="card-img-top"
       src="{{site.url}}{{site.baseurl}}{{ page.thumbnail }}"
       alt="{{ post.title }}"
-    />
+    /> -->
     <br />
     <br />
     {{ content }}
