--- a/docs/_includes/blog_post_article.html
+++ b/docs/_includes/blog_post_article.html
@@ -50,9 +50,8 @@
     {%- include hyvor_comments.html -%}
    </div>
     {%- endif -%} -->
-  <!-- Incomment incase you want to use Disqus
-      <div id="disqus_thread"></div>
-   -->
+   <!-- Incomment incase you want to use Disqus -->
+  <div id="disqus_thread"></div>
 
 
 </article>
