--- a/docs/_layouts/product.html
+++ b/docs/_layouts/product.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="row">
   <div class="col-lg-12">
-      <nav class="fixed-top" id="snipcart-floating-cart">
+      <!-- <nav class="fixed-top" id="snipcart-floating-cart">
           <button class="btn btn-lg btn-dark header__checkout snipcart-checkout">
               <svg width="31" height="27" viewBox="0 0 31 27" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -11,9 +11,8 @@ layout: default
                   fill="#9094FF" class="header__checkout-fill"></path>
               </svg>
               <span class="snipcart-items-count"></span>
-              <!-- <span class="snipcart-total-price"></span> -->
             </button>
-       </nav>
+       </nav> -->
 
   </div>
 </div>
