add coding activities

--- a/docs/_includes/coding_activity.html
+++ b/docs/_includes/coding_activity.html
@@ -1,9 +1,10 @@
 <!-- Wakatime ( Replace with your own wakatime embed config at https://wakatime.com )-->
 
 <!-- Languages  -->
-<!-- <figure><embed src="https://wakatime.com/share/@12ac2931-d3a9-412f-8cb0-428752ea4c63/9c53cbc4-06fe-40ec-87c8-7cc3a4f2045b.svg"></embed></figure> -->
+<figure><embed src="https://wakatime.com/share/@12ac2931-d3a9-412f-8cb0-428752ea4c63/5543a185-1677-4d8b-b1f2-ea50cb77adb8.svg"></embed></figure>
 
 <!-- Hours Coded -->
-<!-- <figure>
-    <embed src="https://wakatime.com/share/@sujaykundu777/5fcfa63e-9357-44d1-9a49-5244504a1f13.svg"></embed>
-</figure> -->
+<figure><embed src="https://wakatime.com/share/@12ac2931-d3a9-412f-8cb0-428752ea4c63/fbfcab4c-8795-4a0e-871f-036f0a980ffd.svg"></embed></figure>
+
+
+<figure><embed src="https://wakatime.com/share/@12ac2931-d3a9-412f-8cb0-428752ea4c63/bf581ec9-68f3-4ee4-a89e-b0a8f72e9878.svg"></embed></figure>
